wb-2207 to stable (#197)
* releases: wb-2207 to stable

* add missing packages to git-sources.yaml for release branch generator

* git-source: add wb-mqtt-rfblinds package

* add wb-update-notifier to git-sources

* wb-2207: wb7/stretch; wb7/bullseye: linux-image-wb7 -> 5.10.35-wb120

Co-authored-by: vdromanov <vdromanov@yahoo.com>

--- a/git-sources.yaml
+++ b/git-sources.yaml
@@ -37,6 +37,7 @@ by-package:
     wb-mqtt-knx: "https://github.com/wirenboard/wb-mqtt-knx"
     wb-mqtt-lirc: "https://github.com/wirenboard/wb-mqtt-lirc"
     wb-mqtt-mbgate: "https://github.com/wirenboard/wb-mqtt-mbgate"
+    wb-mqtt-rfblinds: "https://github.com/wirenboard/wb-mqtt-rfblinds"
     wb-mqtt-serial: "https://github.com/wirenboard/wb-mqtt-serial"
     wb-mqtt-smartbus: "https://github.com/wirenboard/wb-mqtt-smartbus"
     wb-mqtt-snmp: "https://github.com/wirenboard/wb-mqtt-snmp"
@@ -44,6 +45,7 @@ by-package:
     wb-mqtt-timestamper: "https://github.com/wirenboard/wb-mqtt-timestamper"
     wb-mqtt-zabbix: "https://github.com/wirenboard/wb-mqtt-zabbix"
     wb-mqtt-zway: "https://github.com/wirenboard/wb-mqtt-zway"
+    wb-update-notifier: "https://github.com/wirenboard/wb-update-notifier"
     wb-rules: "https://github.com/wirenboard/wb-rules"
     ca-certificates-contactless: null  # FIXME
     contactless-keyring: "https://github.com/wirenboard/keyring"
@@ -52,6 +54,12 @@ by-package:
     linux-firmware-image-4.1.15-wb2: "http://github.com/wirenboard/linux"
     linux-firmware-image-4.9.22-wb2: "http://github.com/wirenboard/linux"
     linux-firmware-image-4.9.22-wb6: "http://github.com/wirenboard/linux"
+    linux-image-wb2: "https://github.com/wirenboard/linux"
+    linux-image-wb6: "https://github.com/wirenboard/linux"
+    linux-image-wb7: "https://github.com/wirenboard/linux"
+    linux-headers-wb2: "https://github.com/wirenboard/linux"
+    linux-headers-wb6: "https://github.com/wirenboard/linux"
+    linux-headers-wb7: "https://github.com/wirenboard/linux"
     mosquitto-dev: "https://github.com/wirenboard/contrib"
     mqtt-tools: "https://github.com/wirenboard/mqtt-tools"
     nginx: "http://github.com/wirenboard/contrib"
@@ -71,6 +79,7 @@ by-package:
     python3-mqttrpc: "https://github.com/wirenboard/mqtt-rpc"
     python3-wb-common: "https://github.com/wirenboard/wb-common"
     python3-wb-mcu-fw-updater: "https://github.com/wirenboard/wb-mcu-fw-updater"
+    python3-modbus-utils-rpc: "https://github.com/wirenboard/modbus-utils-rpc"
     sensor-tools-scada-client: "https://github.com/wirenboard/sensor-tools-scada-client"
     serial-tool: "https://github.com/wirenboard/serial_tool"
     u-boot-tools: null  # FIXME
