--- a/releases.yaml
+++ b/releases.yaml
@@ -73,7 +73,7 @@ releases:
             wb-mqtt-apcsnmp: '0.2'
             wb-mqtt-bmp085: '1.2'
             wb-mqtt-co2mon: 1.1.1
-            wb-mqtt-confed: 1.10.0
+            wb-mqtt-confed: 1.10.0~exp~feature+50202+bullseye+confed+rebase~7~g9b4cf58
             wb-mqtt-dac: 1.2.0
             wb-mqtt-db-cli: 1.3.0
             wb-mqtt-db: 2.5.5
