--- a/releases.yaml
+++ b/releases.yaml
@@ -632,7 +632,7 @@ releases:
             # WB-MRGB
             mrgbw: 3.0.4
             mrgbwG: 3.0.4
-            ledG: 3.1.0+wb1
+            ledG: 3.1.0
             # WB-MCM
             mcm8: 1.3.4
             mcm8G: 1.3.4
