--- a/releases.yaml
+++ b/releases.yaml
@@ -120,7 +120,6 @@ releases:
             u-boot-wb7: 2:2021.10+wb1.4.1
             u-boot-tools: 2:2021.10+wb1.4.1
             u-boot-tools-wb: 2:2021.10+wb1.4.1
-            modemmanager: 1.18.6-1~bpo11+1-wb1
 
         wb6/bullseye:
             <<: *packages-wb-2207
@@ -836,5 +835,7 @@ staging:
         - "z-way-server"
         - "zbw"
         - "zigbee2mqtt*"
+        - "modemmanager"
+        - "network-manager"
     exclude:
         - "*-dbgsym"
