Add modemmanager to wb7/bullseye (#209)

--- a/releases.yaml
+++ b/releases.yaml
@@ -835,5 +835,7 @@ staging:
         - "z-way-server"
         - "zbw"
         - "zigbee2mqtt*"
+        - "modemmanager"
+        - "network-manager"
     exclude:
         - "*-dbgsym"
