staging: ignore python paho

--- a/releases.yaml
+++ b/releases.yaml
@@ -707,3 +707,4 @@ staging:
         - "network-manager"
     exclude:
         - "*-dbgsym"
+        - "python*-paho-mqtt"  # ignore stretch backport
