--- a/releases.yaml
+++ b/releases.yaml
@@ -1,137 +1,5 @@
 releases:
     wb-2207:
-        packages-common: &packages-wb-2207
-            atecc-util: 0.4.7
-            ca-certificates-contactless: '0.1'
-            cmux: '1.2'
-            comerr-dev: 2.1-1.43.4-2+wb1
-            contactless-keyring: '0.1'
-            e2fsck-static: 1.43.4-2+wb1
-            e2fslibs-dev: 1.43.4-2+wb1
-            e2fslibs: 1.43.4-2+wb1
-            e2fsprogs: 1.43.4-2+wb1
-            emmcparm: 5.0.0
-            firmware-realtek: 20170823-1~bpo9+1
-            fuse2fs: 1.43.4-2+wb1
-            hubpower: '1.0'
-            knxd-dev: 0.14.51-1
-            knxd-examples: 0.11.15-1-wb1
-            knxd-tools: 0.14.51-1
-            knxd: 0.14.51-1
-            libateccssl1.1: 0.2.3
-            libateccssl: '0.1'
-            libcomerr2: 1.43.4-2+wb1
-            libfdt1: 1.6.0-1
-            libss2: 1.43.4-2+wb1
-            libwbmqtt-dev: 1.7.2
-            libwbmqtt0: 1.7.2
-            libwbmqtt1-3-dev: 3.8.3
-            libwbmqtt1-3-test-utils: 3.8.3
-            libwbmqtt1-3: 3.8.3
-            libwbmqtt: 1.7.2
-            modbus-utils: 1.2.5
-            mqtt-logger: 1.8.9
-            mqtt-tools: 1.3.0
-            nodejs: 12.19.0-1nodesource1
-            python-gsmmodem-new: '1:0.11'
-            python-json-rpc: 1.9.2.wb1
-            python-mqttrpc: 1.1.2
-            python-nrf24: 1.0+1
-            python-wb-common: 1.4.0
-            python-wb-io: 1.2.3
-            python-wb-mcu-fw-updater: 1.5.1
-            python3-intelhex: 2.3.0-1
-            python3-json-rpc: 1.9.2.wb1
-            python3-modbus-utils-rpc: 1.0.1
-            python3-mqttrpc: 1.1.2
-            python3-paho-mqtt: 1.4.0-1
-            python3-umodbus: 1.0.4-1+wb1
-            python3-wb-common: 1.4.0
-            python3-wb-diag-collect: 1.3.0
-            python3-wb-mcu-fw-updater: 1.5.1
-            python3-wb-mqtt-metrics: 0.1.1
-            python3-wb-update-manager: 1.2.5
-            rapidscada: 6.0.0~beta7-2
-            sensor-tools-scada-client: '1.1'
-            serial-tool: 1.1.0
-            ss-dev: 2.0-1.43.4-2+wb1
-            wb-configs: 3.0.1~exp~feature+49818+bullseye~17~g3d2f6cf
-            wb-daemon-watchdogs: '1.1'
-            wb-demo-kit-configs: 1.5.0
-            wb-diag-collect: 1.3.0
-            wb-dt-overlays: 1.5.0
-            wb-essential: 1.10.0
-            wb-homa-ism-radio: 1.17.3
-            wb-homa-ninja-bridge: 1.9.1
-            wb-homa-rfsniffer: 1.0.9
-            wb-hwconf-manager: 1.52.7
-            wb-knxd-config: 1.1.1
-            wb-mb-explorer: 1.2.7
-            wb-mcu-fw-flasher: 1.1.0
-            wb-mcu-fw-updater: 1.5.1
-            wb-mqtt-adc: 2.5.0
-            wb-mqtt-apcsnmp: '0.2'
-            wb-mqtt-bmp085: '1.2'
-            wb-mqtt-co2mon: 1.1.1
-            wb-mqtt-confed: 1.10.0
-            wb-mqtt-dac: 1.2.0
-            wb-mqtt-db-cli: 1.3.0
-            wb-mqtt-db: 2.5.5
-            wb-mqtt-gpio: 2.8.4
-            wb-mqtt-homeui: 2.46.1
-            wb-mqtt-iec104: 1.0.2
-            wb-mqtt-knx: 1.10.0
-            wb-mqtt-lirc: 1.1.4
-            wb-mqtt-logs: 1.4.0
-            wb-mqtt-mbgate: 1.2.0~exp~feature+50202+bullseye~2~g709a6f4
-            wb-mqtt-metrics: 0.1.1
-            wb-mqtt-mhz19: '1.0'
-            wb-mqtt-opcua: 1.0.4
-            wb-mqtt-rfblinds: '1.0'
-            wb-mqtt-serial: 2.68.5
-            wb-mqtt-sht1x: '1.0'
-            wb-mqtt-smartbus: '1.2'
-            wb-mqtt-smartweb: 1.1.1
-            wb-mqtt-snmp: 1.2.0
-            wb-mqtt-spl-meter: 1.1.1
-            wb-mqtt-timestamper: 1.10.1
-            wb-mqtt-w1: 2.2.2
-            wb-mqtt-zabbix: '0.2'
-            wb-rules-system: 1.8.1
-            wb-rules: 2.12.0~exp~feature+mosquitto+socket~1~gf346539
-            wb-suite: 1.11.0
-            wb-test-suite-deps: 1.10.0
-            wb-test-suite-dummy: 1.10.0
-            wb-update-manager: 1.2.5
-            wb-utils: 3.7.0~exp~feature+50202+bullseye~1~gd3c85c3
-            wb-update-notifier: 0.1.0
-            wb-zigbee2mqtt: 1.1.0
-            z-way-server: 3.2.2-93-g8c133c1
-            zbw: '1.2'
-            zigbee2mqtt-1.18.1: 1.18.1
-            zigbee2mqtt: 1.25.2
-
-        wb7/bullseye:
-            <<: *packages-wb-2207
-
-            linux-headers-wb7: 5.10.35-wb120
-            linux-image-wb7: 5.10.35-wb120
-            linux-libc-dev: 5.10.35-wb120
-            u-boot-wb7: 2:2021.10+wb1.4.1
-            u-boot-tools: 2:2021.10+wb1.4.1
-            u-boot-tools-wb: 2:2021.10+wb1.4.1
-
-        wb6/bullseye:
-            <<: *packages-wb-2207
-
-            linux-headers-wb6: 5.10.35-wb116
-            linux-image-wb6: 5.10.35-wb116
-            linux-libc-dev: 5.10.35-wb116
-            u-boot-wb6: 2:2021.10+wb1.2.0
-            u-boot-tools: 2:2021.10+wb1.2.0
-            u-boot-tools-wb: 2:2021.10+wb1.2.0
-
-
         packages-common-stretch: &packages-wb-2207-stretch
             atecc-util: 0.4.7
             ca-certificates-contactless: '0.1'
@@ -839,3 +707,4 @@ staging:
         - "network-manager"
     exclude:
         - "*-dbgsym"
+        - "python*-paho-mqtt"  # ignore stretch backport
