--- a/releases.yaml
+++ b/releases.yaml
@@ -503,7 +503,7 @@ releases:
             ledG: 3.1.0+wb1
             # WB-MCM
             mcm8: 1.3.4
-            mcm8G: 1.3.4
+            mcm8G: 1.3.4+wb1
             # WB-MAO
             mao4: 2.1.1
             mao4G: 2.1.1
