--- a/releases.yaml
+++ b/releases.yaml
@@ -160,6 +160,7 @@ releases:
             wb-rules: 2.11.4
             wb-suite: 1.11.0
             wb-test-suite-deps: 1.12.0
+            python3-wb-test-suite-deps: 1.14.0
             z-way-server: 3.2.2-93-g8c133c1
             zbw: '1.2'
             zigbee2mqtt: 1.25.2
