--- a/releases.yaml
+++ b/releases.yaml
@@ -76,7 +76,7 @@ releases:
             python3-wb-diag-collect: 1.3.0
             python3-wb-mcu-fw-updater: 1.5.1
             python3-wb-mqtt-metrics: 0.1.1
-            python3-wb-update-manager: 1.2.5
+            python3-wb-update-manager: 1.2.5-wb1
             sensor-tools-scada-client: '1.1'
             serial-tool: 1.1.0
             tcc: 0.9.27~git20170226.c4c3f500-1
@@ -109,7 +109,7 @@ releases:
             wb-mqtt-zway: 1.0.3+wb2
             wb-rules-system: 1.8.1
             wb-test-suite-dummy: 1.10.0
-            wb-update-manager: 1.2.5
+            wb-update-manager: 1.2.5-wb1
             wb-utils: 3.7.0-wb106
             wb-zigbee2mqtt: 1.1.0
             wpagui: 2.3-1+deb8u4
