--- a/releases.yaml
+++ b/releases.yaml
@@ -85,7 +85,7 @@ releases:
             wb-configs: 2.3.4-wb100
             wb-daemon-watchdogs: '1.1'
             wb-diag-collect: 1.3.0
-            wb-dt-overlays: 1.5.0
+            wb-dt-overlays: 1.6.0
             wb-homa-ism-radio: 1.17.3
             wb-homa-ninja-bridge: 1.9.1
             wb-homa-rfsniffer: 1.0.9
@@ -169,9 +169,9 @@ releases:
         wb7/stretch: &packages-wb-2207-armhf-wb7-stretch
             <<: *packages-wb-2207-armhf-stretch
 
-            linux-headers-wb7: 5.10.35-wb120
-            linux-image-wb7: 5.10.35-wb120
-            linux-libc-dev: 5.10.35-wb120
+            linux-headers-wb7: 5.10.35-wb120+wb1
+            linux-image-wb7: 5.10.35-wb120+wb1
+            linux-libc-dev: 5.10.35-wb120+wb1
             u-boot-wb7: 2:2021.10+wb1.4.3
             u-boot-tools: 2:2021.10+wb1.4.3
             u-boot-tools-wb: 2:2021.10+wb1.4.3
