--- a/releases.yaml
+++ b/releases.yaml
@@ -85,7 +85,7 @@ releases:
             wb-configs: 2.3.4-wb100
             wb-daemon-watchdogs: '1.1'
             wb-diag-collect: 1.3.0
-            wb-dt-overlays: 1.6.0
+            wb-dt-overlays: 1.6.0+wb1
             wb-homa-ism-radio: 1.17.3
             wb-homa-ninja-bridge: 1.9.1
             wb-homa-rfsniffer: 1.0.9
