--- a/releases.yaml
+++ b/releases.yaml
@@ -523,6 +523,7 @@ releases:
             mao4G: 2.1.2
             # WB-MAI
             wb-mai-v10: 1.3.1
+            wb-mai6: 2.0.0
             # WB-MIO
             mio: 1.5.3
             # WB-REF
@@ -613,6 +614,7 @@ releases:
             mao4G: 2.1.2
             # WB-MAI
             wb-mai-v10: 1.3.1
+            wb-mai6: 2.0.0
             # WB-MIO
             mio: 1.5.3
             # WB-REF
