--- a/releases.yaml
+++ b/releases.yaml
@@ -146,14 +146,14 @@ releases:
             wb-mqtt-dac: 1.2.0
             wb-mqtt-db: 2.6.0
             wb-mqtt-gpio: 2.8.4-wb100
-            wb-mqtt-homeui: 2.44.4
+            wb-mqtt-homeui: 2.44.4-wb100
             wb-mqtt-iec104: 1.0.2
             wb-mqtt-knx: 1.9.0
             wb-mqtt-logs: 1.3.0-wb100  # stretch-fixed, >> 1.4.0 builds are for bullseye
             wb-mqtt-mbgate: 1.1.2
             wb-mqtt-opcua: 1.0.4
             wb-mqtt-rfblinds: '1.0'
-            wb-mqtt-serial: 2.68.6-wb105
+            wb-mqtt-serial: 2.68.6-wb106
             wb-mqtt-smartweb: 1.1.1
             wb-mqtt-snmp: 1.2.0
             wb-mqtt-w1: 2.2.2
