staging: add intrascada

--- a/releases.yaml
+++ b/releases.yaml
@@ -700,6 +700,8 @@ staging:
         - "emmcparm"
         - "firmware-realtek"
         - "hubpower"
+        - "intrascada"
+        - "intrahouse"
         - "knxd*"
         - "libateccssl*"
         - "libfdt1"
