Add intrahouse, intrascada to wb2207

--- a/releases.yaml
+++ b/releases.yaml
@@ -126,6 +126,8 @@ releases:
             emmcparm: 5.0.0
             fuse2fs: 1.43.4-2+wb1
             gpiod: 1.2-3
+            intrahouse: 5.11.40
+            intrascada: 5.11.40
             libateccssl1.1: 0.2.3
             libcomerr2: 1.43.4-2+wb1
             libgpiod2: 1.2-3
