--- a/releases.yaml
+++ b/releases.yaml
@@ -146,7 +146,7 @@ releases:
             wb-homa-w1: 2.2.2
             wb-hwconf-manager: 1.52.7-wb102
             wb-mqtt-adc: 2.5.0
-            wb-mqtt-confed: 1.8.1
+            wb-mqtt-confed: 1.8.1-wb100
             wb-mqtt-dac: 1.2.0
             wb-mqtt-db: 2.6.0-wb100
             wb-mqtt-gpio: 2.8.4-wb100
