--- a/releases.yaml
+++ b/releases.yaml
@@ -481,7 +481,7 @@ releases:
             ms-33: 4.22.0
             msv2-4.0: 4.22.0
             msv2-4.0_gd: 4.22.0
-            msv2G42: 4.22.0
+            msv2G42: 4.22.1+wb1
             msw3-48mh: 4.22.0
             msw3-48mh30: 4.22.0
             msw3-49: 4.22.0
@@ -490,10 +490,10 @@ releases:
             msw3-49_gd: 4.22.0
             msw3-49gd_oa: 4.22.0
             msw3G49th: 4.22.0
-            msw3G419: 4.22.0
-            msw3G419th: 4.22.0
-            msw3Gc: 4.22.0
-            msw3G419L: 4.22.1
+            msw3G419: 4.22.1+wb1
+            msw3G419th: 4.22.1+wb1
+            msw3Gc: 4.22.1+wb1
+            msw3G419L: 4.22.1+wb1
             # WB-MD
             mdm3: 2.5.3
             mdm3_042: 2.5.3
@@ -562,29 +562,29 @@ releases:
             wbmwac_042: 1.19.2
             wbmwacG: 1.19.2
             # WB-MS
-            m1w2: 4.25.1
-            m1w2-21: 4.25.1
-            m1w2G21: 4.25.1
-            mir: 4.25.1
-            mir64: 4.25.1
-            mir64_gd: 4.25.1
-            mai2cc: 4.25.1
-            ms-33: 4.25.1
-            msv2-4.0: 4.25.1
-            msv2-4.0_gd: 4.25.1
-            msv2G42: 4.25.1
-            msw3-48mh: 4.25.1
-            msw3-48mh30: 4.25.1
-            msw3-49: 4.25.1
-            msw3-49th30: 4.25.1
-            msw3-49-467: 4.25.1
-            msw3-49_gd: 4.25.1
-            msw3-49gd_oa: 4.25.1
-            msw3G49th: 4.25.1
-            msw3G419: 4.25.1
-            msw3G419th: 4.25.1
-            msw3Gc: 4.25.1
-            msw3G419L: 4.25.1
+            m1w2: 4.25.2
+            m1w2-21: 4.25.2
+            m1w2G21: 4.25.2
+            mir: 4.25.2
+            mir64: 4.25.2
+            mir64_gd: 4.25.2
+            mai2cc: 4.25.2
+            ms-33: 4.25.2
+            msv2-4.0: 4.25.2
+            msv2-4.0_gd: 4.25.2
+            msv2G42: 4.25.2
+            msw3-48mh: 4.25.2
+            msw3-48mh30: 4.25.2
+            msw3-49: 4.25.2
+            msw3-49th30: 4.25.2
+            msw3-49-467: 4.25.2
+            msw3-49_gd: 4.25.2
+            msw3-49gd_oa: 4.25.2
+            msw3G49th: 4.25.2
+            msw3G419: 4.25.2
+            msw3G419th: 4.25.2
+            msw3Gc: 4.25.2
+            msw3G419L: 4.25.2
             # WB-MD
             mdm3: 2.6.5
             mdm3_042: 2.6.5
