--- a/releases.yaml
+++ b/releases.yaml
@@ -222,6 +222,7 @@ releases:
         wb7/stretch:
             <<: *packages-wb-2207-armhf-wb7-stretch
             wb-configs: 2.3.4-wb100-70549e24
+            wb-configs-stretch: 2.3.4-wb100-70549e24
 
     wb-2207-bullseye-transition:
         packages-common-bullseye-transition: &packages-wb-2207-bullseye-transition
