--- a/releases.yaml
+++ b/releases.yaml
@@ -397,7 +397,7 @@ releases:
             wb-configs: 2.3.4-wb100-70549e24-003
             wb-configs-stretch: 2.3.4-wb100-70549e24-003
             wb-mqtt-homeui: 2.44.4-wb100-70549e24
-            wb-utils: 3.7.0-wb108-70549e24-001~exp~feature+wb+2207+70549e24~10~ge9171cd
+            wb-utils: 3.7.0-wb108-70549e24-001~exp~feature+wb+2207+70549e24~11~g865f415
 
     wb-2207-bullseye-transition:
         packages-common-bullseye-transition: &packages-wb-2207-bullseye-transition
