--- a/releases.yaml
+++ b/releases.yaml
@@ -496,6 +496,7 @@ releases:
             msw3G419th: 4.26.0
             msw3Gc: 4.26.0
             msw3G419L: 4.22.1+wb1
+            msw5G: 4.29.3
             # WB-MD
             mdm3: 2.5.3
             mdm3_042: 2.5.3
@@ -587,6 +588,7 @@ releases:
             msw3G419th: 4.29.2
             msw3Gc: 4.29.2
             msw3G419L: 4.29.2
+            msw5G: 4.29.3
             # WB-MD
             mdm3: 2.6.5
             mdm3_042: 2.6.5
