--- a/git-sources.yaml
+++ b/git-sources.yaml
@@ -54,7 +54,6 @@ by-package:
     linux-firmware-image-4.1.15-wb2: "http://github.com/wirenboard/linux"
     linux-firmware-image-4.9.22-wb2: "http://github.com/wirenboard/linux"
     linux-firmware-image-4.9.22-wb6: "http://github.com/wirenboard/linux"
-    linux-image-wb2: "https://github.com/wirenboard/linux"
     linux-image-wb6: "https://github.com/wirenboard/linux"
     linux-image-wb7: "https://github.com/wirenboard/linux"
     linux-headers-wb2: "https://github.com/wirenboard/linux"
@@ -103,6 +102,8 @@ by-package:
     wb-test-suite: "https://github.com/wirenboard/test-suite"
     wb-utils: "https://github.com/wirenboard/wb-utils"
     wb-zigbee2mqtt: "https://github.com/wirenboard/wb-zigbee2mqtt"
+    wb-nm-helper: "https://github.com/wirenboard/wb-nm-helper"
+    python3-wb-nm-helper: "https://github.com/wirenboard/wb-nm-helper"
 
     atecc-util: "https://github.com/wirenboard/atecc-util"
     e2fsck-static: null  # FIXME
