--- a/releases.yaml
+++ b/releases.yaml
@@ -92,7 +92,6 @@ releases:
             wb-ble-tesliot: 1.0.4
             wb-cc2652p-flasher: 1.0.0
             wb-configs: 3.13.1
-            wb-configs-stretch: 2.3.5
             wb-daemon-watchdogs: '1.1'
             wb-demo-kit-configs: 1.6.1
             wb-device-manager: 1.5.5
@@ -706,6 +705,7 @@ staging:
         - "python*-paho-mqtt"  # ignore stretch backport
         - "gpiod"  # ignore stretch backport
         - "libgpiod*"  # ignore stretch backport
+        - "wb-configs-stretch"
         - package: "*wb-update-manager"
           version: "*-upgrade*"
         - package: wb-mqtt-homeui
