--- a/releases.yaml
+++ b/releases.yaml
@@ -38,9 +38,6 @@ releases:
             libwbmqtt-dev: 1.7.2
             libwbmqtt0: 1.7.2
             libwbmqtt1: 1.2.0
-            libwbmqtt1-2: 2.5.0
-            libwbmqtt1-2-dev: 2.5.0
-            libwbmqtt1-2-test-utils: 2.5.0
             libwbmqtt1-3: 3.10.0
             libwbmqtt1-3-dev: 3.10.0
             libwbmqtt1-3-test-utils: 3.10.0
@@ -74,7 +71,7 @@ releases:
             python3-json-rpc: 1.9.2.wb1
             python3-modbus-utils-rpc: 1.1.5
             python3-mosquitto: 1.3.4-2contactless1
-            python3-mqttrpc: 1.2.0
+            python3-mqttrpc: 1.2.1
             python3-paho-socket: 0.0.3
             python3-umodbus: 1.0.4-1+wb1
             python3-wb-common: 2.1.1
@@ -706,6 +703,7 @@ staging:
         - "gpiod"  # ignore stretch backport
         - "libgpiod*"  # ignore stretch backport
         - "wb-configs-stretch"
+        - "libwbmqtt1-2*"
         - package: "*wb-update-manager"
           version: "*-upgrade*"
         - package: wb-mqtt-homeui
