wb-2207-transition: bump versions of special packages

--- a/releases.yaml
+++ b/releases.yaml
@@ -387,9 +387,9 @@ releases:
 
     wb-2207-bullseye-transition:
         packages-common-bullseye-transition: &packages-wb-2207-bullseye-transition
-            python3-wb-update-manager: 1.2.5-upgrade15
-            wb-mqtt-homeui: 2.44.4-upgrade2
-            wb-update-manager: 1.2.5-upgrade15
+            python3-wb-update-manager: 1.2.5-wb1-upgrade15
+            wb-mqtt-homeui: 2.44.4-wb100-upgrade2
+            wb-update-manager: 1.2.5-wb1-upgrade15
 
         wb6/stretch:
             <<: *packages-wb-2207-armhf-wb6-stretch
