--- a/releases.yaml
+++ b/releases.yaml
@@ -449,7 +449,7 @@ releases:
             msw3G419: 4.22.1+wb1
             msw3G419th: 4.26.0
             msw3Gc: 4.26.0
-            msw3G419L: 4.22.1+wb1
+            msw3G419L: 4.29.2
             msw5G: 4.29.3
             # WB-MD
             mdm3: 2.5.3
