--- a/releases.yaml
+++ b/releases.yaml
@@ -75,7 +75,7 @@ releases:
             python3-wb-diag-collect: 1.5.6
             python3-wb-mcu-fw-updater: 1.7.1
             python3-wb-mqtt-metrics: 0.3.0
-            python3-wb-nm-helper: 1.23.1
+            python3-wb-nm-helper: 1.23.1-wb100
             python3-wb-test-suite-deps: 1.17.0
             python3-wb-update-manager: 1.3.1
             rapidscada: 6.0.2-1
@@ -135,7 +135,7 @@ releases:
             wb-mqtt-w1: 2.2.5
             wb-mqtt-zabbix: '0.2'
             wb-mqtt-zway: 1.0.3+wb2
-            wb-nm-helper: 1.23.1
+            wb-nm-helper: 1.23.1-wb100
             wb-rules: 2.18.1
             wb-rules-system: 1.9.3
             wb-suite: 1.17.0
