--- a/releases.yaml
+++ b/releases.yaml
@@ -396,7 +396,7 @@ releases:
             <<: *packages-wb-2304-wb7-bullseye
             wb-configs: 3.13.1-70549e24-001~exp~feature+70549e24+bullseye~6~g60bc56b
             wb-mqtt-homeui: 2.59.0-70549e24-001~exp~feature+wb+2304+70549e24~1~g51ee365
-            wb-utils: 4.8.1-70549e24-001~exp~feature+wb+2304+70549e24~5~gcf8d482
+            wb-utils: 4.8.1-70549e24-001~exp~feature+wb+2304+70549e24~6~ge0411e7
             wb-nm-helper: 1.23.1-wb101~exp~feature+virtual+devices+handle+no+nm~4~g1d85d59
             python3-wb-nm-helper: 1.23.1-wb101~exp~feature+virtual+devices+handle+no+nm~4~g1d85d59
             u-boot-wb7: 2:2021.10+wb1.5.0
