--- a/releases.yaml
+++ b/releases.yaml
@@ -721,6 +721,7 @@ staging:
         - "libwbmqtt1-dev"
         - "libwbmqtt1-test-utils"
         - "libwbmqtt1-2*"
+        - "libwbmqtt1-3*"
         - "wb-homa-zway"
         - "wb-mqtt-zway"
         - "wb-mqtt-lirc"
