firmware stable new target `map6semG16` 2.6.1

--- a/releases.yaml
+++ b/releases.yaml
@@ -483,6 +483,7 @@ releases:
             map3eG16: 2.3.8
             map6seG16: 2.3.8
             map6sG16: 2.3.8
+            map6semG16: 2.6.1
             # WB-MRGB
             mrgbw: 3.3.4
             mrgbwG: 3.3.4
