Exclude from staging

--- a/releases.yaml
+++ b/releases.yaml
@@ -882,14 +882,25 @@ staging:
         - "gpiod"  # ignore stretch backport
         - "libgpiod*"  # ignore stretch backport
         - "wb-configs-stretch"
+        - "libwbmqtt"
+        - "libwbmqtt-dev"
+        - "libwbmqtt0"
         - "libwbmqtt1"
         - "libwbmqtt1-dev"
         - "libwbmqtt1-test-utils"
         - "libwbmqtt1-2*"
         - "libwbmqtt1-3*"
+        - "mqtt-logger"
+        - "python-json-rpc"
+        - "python-mqttrpc"
+        - "python-wb-common"
+        - "python-wb-mcu-fw-updater"
+        - "wb-mqtt-spl-meter"
+        - "wb-mqtt-timestamper"
         - "wb-homa-zway"
         - "wb-mqtt-zway"
         - "wb-mqtt-lirc"
+        - "wb-homa-ninja-bridge"
         - package: "*wb-update-manager"
           version: "*-upgrade*"
         - package: wb-mqtt-homeui
