git-sources: add missed sources

--- a/git-sources.yaml
+++ b/git-sources.yaml
@@ -1,7 +1,10 @@
 by-package:
     cmux: "https://github.com/wirenboard/cmux"
+    flash-simcom-a76xx: "https://github.com/wirenboard/flash-simcom-a76xx"
     hubpower: "https://github.com/wirenboard/hubpower"
     libateccssl1.1: "https://github.com/wirenboard/cryptoauth-openssl-engine"
+    libmodbus-dev: "https://github.com/wirenboard/libmodbus"
+    libmodbus5: "https://github.com/wirenboard/libmodbus"
     libmosquitto-dev: "https://github.com/wirenboard/contrib"
     libmosquitto1: "https://github.com/wirenboard/contrib"
     libmosquittopp-dev: "https://github.com/wirenboard/contrib"
@@ -14,14 +17,21 @@ by-package:
     mmc-utils: null  # FIXME
     modbus-utils: "https://github.com/wirenboard/modbus-utils"
     modbus-utils-rpc: "https://github.com/wirenboard/modbus-utils-rpc"
+    modemmanager: "https://github.com/wirenboard/modemmanager"
+    modemmanager-dev: "https://github.com/wirenboard/modemmanager"
+    modemmanager-doc: "https://github.com/wirenboard/modemmanager"
     mosquitto: "https://github.com/wirenboard/contrib"
     mosquitto-clients: "https://github.com/wirenboard/contrib"
     mqtt-logger: "https://github.com/wirenboard/mqtt-logger"
+    network-manager: "https://github.com/wirenboard/network-manager"
+    network-manager-config-connectivity-debian: "https://github.com/wirenboard/network-manager"
+    network-manager-dev: "https://github.com/wirenboard/network-manager"
     ntp: "https://github.com/wirenboard/contrib"
     ntpdate: "https://github.com/wirenboard/contrib"
     python-wb-io: "https://github.com/wirenboard/wb-io-python"
     u-boot-tools: null  # FIXME
     u-boot-tools-wb: null  # FIXME
+    wb-ble-tesliot: "https://github.com/wirenboard/wb-ble-tesliot"
     wb-homa-adc: "https://github.com/wirenboard/wb-homa-adc"
     wb-mqtt-adc: "https://github.com/wirenboard/wb-homa-adc"
     wb-homa-gpio: "https://github.com/wirenboard/wb-homa-gpio"
@@ -30,7 +40,9 @@ by-package:
     wb-homa-rfsniffer: "https://github.com/wirenboard/rfsniffer"
     wb-homa-w1: "https://github.com/wirenboard/wb-homa-w1"
     wb-knxd-config: "https://github.com/wirenboard/wb-knxd-config"
+    wb-mb-explorer: "https://github.com/wirenboard/wb-mb-explorer"
     wb-mcu-fw-flasher: "https://github.com/wirenboard/wb-mcu-fw-flasher"
+    wb-modbus-ext-scanner: "https://github.com/wirenboard/wb-modbus-ext-scanner"
     wb-mqtt-apcsnmp: "https://github.com/wirenboard/wb-mqtt-apcsnmp"
     wb-mqtt-co2mon: "https://github.com/wirenboard/wb-mqtt-co2mon"
     wb-mqtt-confed: "https://github.com/wirenboard/wb-mqtt-confed"
@@ -38,12 +50,15 @@ by-package:
     wb-mqtt-knx: "https://github.com/wirenboard/wb-mqtt-knx"
     wb-mqtt-lirc: "https://github.com/wirenboard/wb-mqtt-lirc"
     wb-mqtt-mbgate: "https://github.com/wirenboard/wb-mqtt-mbgate"
+    wb-mqtt-metrics: "https://github.com/wirenboard/wb-mqtt-metrics"
+    wb-mqtt-opcua: "https://github.com/wirenboard/wb-mqtt-opcua"
     wb-mqtt-rfblinds: "https://github.com/wirenboard/wb-mqtt-rfblinds"
     wb-mqtt-serial: "https://github.com/wirenboard/wb-mqtt-serial"
     wb-mqtt-smartbus: "https://github.com/wirenboard/wb-mqtt-smartbus"
     wb-mqtt-snmp: "https://github.com/wirenboard/wb-mqtt-snmp"
     wb-mqtt-spl-meter: "https://github.com/wirenboard/spl-meter"
     wb-mqtt-timestamper: "https://github.com/wirenboard/wb-mqtt-timestamper"
+    wb-mqtt-urri: "https://github.com/wirenboard/wb-mqtt-urri"
     wb-mqtt-zabbix: "https://github.com/wirenboard/wb-mqtt-zabbix"
     wb-mqtt-zway: "https://github.com/wirenboard/wb-mqtt-zway"
     wb-update-notifier: "https://github.com/wirenboard/wb-update-notifier"
@@ -77,8 +92,11 @@ by-package:
     python3-json-rpc: "https://github.com/wirenboard/json-rpc"
     python3-mosquitto: "http://github.com/wirenboard/contrib"
     python3-mqttrpc: "https://github.com/wirenboard/python-mqtt-rpc"
+    python3-umodbus: "https://github.com/wirenboard/umodbus"
+    python3-wb-update-manager: "https://github.com/wirenboard/wb-update-manager"
     python3-wb-common: "https://github.com/wirenboard/wb-common"
     python3-wb-mcu-fw-updater: "https://github.com/wirenboard/wb-mcu-fw-updater"
+    python3-wb-mqtt-metrics: "https://github.com/wirenboard/wb-mqtt-metrics"
     python3-modbus-utils-rpc: "https://github.com/wirenboard/modbus-utils-rpc"
     sensor-tools-scada-client: "https://github.com/wirenboard/sensor-tools-scada-client"
     serial-tool: "https://github.com/wirenboard/serial_tool"
@@ -101,6 +119,7 @@ by-package:
     wb-mqtt-sht1x: "https://github.com/wirenboard/wb-mqtt-sht1x"
     wb-rules-system: "https://github.com/wirenboard/wb-rules-system"
     wb-test-suite: "https://github.com/wirenboard/test-suite"
+    wb-update-manager: "https://github.com/wirenboard/wb-update-manager"
     wb-utils: "https://github.com/wirenboard/wb-utils"
     wb-zigbee2mqtt: "https://github.com/wirenboard/wb-zigbee2mqtt"
     wb-nm-helper: "https://github.com/wirenboard/wb-nm-helper"
