--- a/releases.yaml
+++ b/releases.yaml
@@ -731,15 +731,15 @@ releases:
             map3eG: 2.7.0
             map3h: 2.7.0
             map3h51: 2.7.0
-            map6s: 2.6.3
-            map6s51: 2.6.3
-            map6se: 2.6.3
+            map6s: 2.6.3            #таргет не проходит стенд калибровки на прошивке 2.7.0
+            map6s51: 2.6.3          #таргет не проходит стенд калибровки на прошивке 2.7.0
+            map6se: 2.6.3           #таргет не проходит стенд калибровки на прошивке 2.7.0
             map12e: 2.7.0
             map12eG: 2.7.0
             map12h: 2.7.0
             map3eG16: 2.7.0
             map6seG16: 2.7.0
-            map6sG16: 2.6.3
+            map6sG16: 2.6.3         #таргет не проходит стенд калибровки на прошивке 2.7.0
             map6semG16: 2.7.0
             # WB-MRGB
             mrgbw: 3.3.4        # на данном таргете на версиях старше 3.3.4 прошивка перестала помещаться в 25K (32K FLASH - 4K bootloader - 3 flashfs)
