Firmware stable map 2.6.2 (#446)
Допроверили сигнатуры map6se и map6s51

--- a/releases.yaml
+++ b/releases.yaml
@@ -648,8 +648,8 @@ releases:
             map3h: 2.6.2
             map3h51: 2.6.2
             map6s: 2.6.2
-            map6s51: 2.3.8 #таргет не проходит стенд калибровки на прошивке 2.6.2
-            map6se: 2.3.8  #таргет не проходит стенд калибровки на прошивке 2.6.2
+            map6s51: 2.6.2
+            map6se: 2.6.2
             map12e: 2.6.2
             map12eG: 2.6.2
             map12h: 2.6.2
