--- a/releases.yaml
+++ b/releases.yaml
@@ -705,10 +705,11 @@ releases:
             wbmwac: 1.19.2      # на данном таргете на версиях старше 1.19.2 прошивка перестала помещаться в 25K (32K FLASH - 4K bootloader - 3 flashfs)
             wbmwac_042: 1.19.2  # на данном таргете на версиях старше 1.19.2 прошивка перестала помещаться в 25K (32K FLASH - 4K bootloader - 3 flashfs)
             wbmwacG: 1.20.1
+            # WB-M1W2
+            m1w2: 4.31.0        # на данном таргете на версиях старше 1.19.2 прошивка перестала помещаться в 25K (32K FLASH - 4K bootloader - 3 flashfs)
+            m1w2-21: 4.31.0     # на данном таргете на версиях старше 1.19.2 прошивка перестала помещаться в 25K (32K FLASH - 4K bootloader - 3 flashfs)
+            m1w2G21: 4.32.0
             # WB-MS
-            m1w2: 4.29.11
-            m1w2-21: 4.29.11
-            m1w2G21: 4.29.11
             mir: 4.29.11
             mir64: 4.29.11
             mir64_gd: 4.29.11
