wb-map firmware stable 2.7.1

--- a/releases.yaml
+++ b/releases.yaml
@@ -641,23 +641,23 @@ releases:
             mdm3_26: 2.6.6
             mdm3G26: 2.6.6
             # WB-MAP
-            map3e: 2.6.2
+            map3e: 2.7.1
             map3e16: 2.7.1
-            map3e_36: 2.6.2
-            map3e_031f6: 2.6.2
-            map3eG: 2.6.2
-            map3h: 2.6.2
-            map3h51: 2.6.2
-            map6s: 2.6.2
-            map6s51: 2.6.2
-            map6se: 2.6.2
-            map12e: 2.6.2
-            map12eG: 2.6.2
-            map12h: 2.6.2
-            map3eG16: 2.6.2
-            map6seG16: 2.6.2
-            map6sG16: 2.6.2
-            map6semG16: 2.6.2
+            map3e_36: 2.7.1
+            map3e_031f6: 2.7.1
+            map3eG: 2.7.1
+            map3h: 2.7.1
+            map3h51: 2.7.1
+            map6s: 2.6.2            #таргет не проходит стенд калибровки на прошивке 2.7.1
+            map6s51: 2.6.2          #таргет не проходит стенд калибровки на прошивке 2.7.1
+            map6se: 2.7.1
+            map12e: 2.7.1
+            map12eG: 2.7.1
+            map12h: 2.7.1
+            map3eG16: 2.7.1
+            map6seG16: 2.7.1
+            map6sG16: 2.6.2         #таргет не проходит стенд калибровки на прошивке 2.7.1
+            map6semG16: 2.7.1
             # WB-MRGB
             mrgbw: 3.3.4
             mrgbwG: 3.3.4
