Add new signature `msv2G42nlg: 4.31.3` for WB-MS v2

--- a/releases.yaml
+++ b/releases.yaml
@@ -799,6 +799,7 @@ releases:
             msv2-4.0: 4.29.11
             msv2-4.0_gd: 4.29.11
             msv2G42: 4.31.2
+            msv2G42nlg: 4.31.3
             msw3-48mh: 4.29.11
             msw3-48mh30: 4.29.11
             msw3-49: 4.29.11
@@ -898,6 +899,7 @@ releases:
             msv2-4.0: 4.31.2
             msv2-4.0_gd: 4.31.2
             msv2G42: 4.31.2
+            msv2G42nlg: 4.31.3
             msw3-48mh: 4.31.2
             msw3-48mh30: 4.29.11    # на данном таргете на версиях старше 4.29.11 прошивка перестала помещаться в 25K (32K FLASH - 4K bootloader - 3 flashfs)
             msw3-49: 4.31.2
