--- a/releases.yaml
+++ b/releases.yaml
@@ -787,8 +787,8 @@ releases:
             wbmwac_042: 1.19.2  # на данном таргете на версиях старше 1.19.2 прошивка перестала помещаться в 25K (32K FLASH - 4K bootloader - 3 flashfs)
             wbmwacG: 1.20.3
             # WB-M1W2
-            m1w2: 4.29.11       # на данном таргете на версиях старше 4.32.0 прошивка перестала помещаться в 25K (32K FLASH - 4K bootloader - 3 flashfs)
-            m1w2-21: 4.29.11    # на данном таргете на версиях старше 4.32.0 прошивка перестала помещаться в 25K (32K FLASH - 4K bootloader - 3 flashfs)
+            m1w2: 4.29.11       # на данном таргете, начиная с версии 4.32.0, прошивка перестала помещаться в 25K (32K FLASH - 4K bootloader - 3 flashfs)
+            m1w2-21: 4.29.11    # на данном таргете, начиная с версии 4.32.0, прошивка перестала помещаться в 25K (32K FLASH - 4K bootloader - 3 flashfs)
             m1w2G21: 4.32.1
             # WB-MS
             mir: 4.29.11
@@ -888,8 +888,8 @@ releases:
             wbmwac_042: 1.19.2  # на данном таргете на версиях старше 1.19.2 прошивка перестала помещаться в 25K (32K FLASH - 4K bootloader - 3 flashfs)
             wbmwacG: 1.20.3
             # WB-M1W2
-            m1w2: 4.31.0        # на данном таргете на версиях старше 4.32.0 прошивка перестала помещаться в 25K (32K FLASH - 4K bootloader - 3 flashfs)
-            m1w2-21: 4.31.0     # на данном таргете на версиях старше 4.32.0 прошивка перестала помещаться в 25K (32K FLASH - 4K bootloader - 3 flashfs)
+            m1w2: 4.31.0        # на данном таргете, начиная с версии 4.32.0, прошивка перестала помещаться в 25K (32K FLASH - 4K bootloader - 3 flashfs)
+            m1w2-21: 4.31.0     # на данном таргете, начиная с версии 4.32.0, прошивка перестала помещаться в 25K (32K FLASH - 4K bootloader - 3 flashfs)
             m1w2G21: 4.32.1
             # WB-MS
             mir: 4.29.11        # на данном таргете на версиях старше 4.29.11 прошивка перестала помещаться в 25K (32K FLASH - 4K bootloader - 3 flashfs)
